--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
         <div>
           <img src="./img/MiConv.com__setting.ico" class="ic hand" style="margin: 10px;">
           <!-- <span id="setting" class="">설정</span> -->
-          <form><!-- radio에 name을 안 넣으면 둘다 선택된다 -->
-            <span><input type="radio" id="selectmode" class="dark" name="selectmode" value="dark" onclick="darkmode()"> 다크모드</span>
-            <span><input type="radio" id="selectmode" class="light" name="selectmode" value="white" onclick="darkmode()"> 라이트모드</span>
-          </form>
+
         </div>
           <button id="sainin" class="hand" type="button" onclick="sainin()"><img src="./img/MiConv.com__humen.ico" class="icon">로그인</button>
       </div>
@@ -101,10 +98,7 @@
         <p>시청기록</p>
       </div><br><hr>
       <div>로그인하면 동영상에 좋아요를 표시하고 댓글을 달거나 구독할 수 있습니다</div><br>
-      <button id="sainin" class="navchaild">
-        <img src="./img/MiConv.com__humen.ico" class="icon">
-        <p>로그인</p>
-      </button><hr>
+      <button id="sainin" class="hand" type="button" onclick="sainin()"><img src="./img/MiConv.com__humen.ico" class="icon">로그인</button>
       <div id="music" class="navchaild">
         <p><div><img src="./img/MiConv.com__music.ico" class="icon"></div></p>
         <p>음악</p>
@@ -218,7 +212,12 @@
         <div><video src="./video/Sunrise - 83880.mp4" onclick="play"></video></div>
         <div>숲</div>
       </div>
+      <form><!-- radio에 name을 안 넣으면 둘다 선택된다 -->
+        <span><input type="radio" id="selectmode" class="dark" name="selectmode" value="dark" onclick="darkmode()"> 다크모드</span>
+        <span><input type="radio" id="selectmode" class="light" name="selectmode" value="light" onclick="darkmode()"> 라이트모드</span>
+      </form>
     </div>
   </div>
+  
 </body>
 </html>
