--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div><video src="./video/Sunrise - 83880.mp4" onclick="play"></video></div>
         <div>숲</div>
       </div>
-      <form><!-- radio에 name을 안 넣으면 둘다 선택된다 -->
+      <form><!-- radio에 name을 안 넣으면 둘다 선택된다, js로 선택값을 가져오려면 value를 넣어야됨 -->
         <span><input type="radio" id="selectmode" class="dark" name="selectmode" value="dark" onclick="darkmode()"> 다크모드</span>
         <span><input type="radio" id="selectmode" class="light" name="selectmode" value="light" onclick="darkmode()"> 라이트모드</span>
       </form>
